[package]
name = "getlogs"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "4.0"
futures-util = "0.3.31"
indicatif = "0.17"
regex = "1.7"
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "brotli", "deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
zip = "0.6"
